[package]
name = "flappy_bird"
version = "0.1.0"
edition = "2021"
authors = ["Flappy Bird Developer"]
description = "A feature-rich Flappy Bird game written in Rust"
license = "MIT"

[dependencies]
macroquad = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
